Bug 188830 - Konqueror hangs on opening hotmail.com
Summary: Konqueror hangs on opening hotmail.com
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 189091 189114 189424 190948 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-04 20:57 UTC by asmerm
Modified: 2009-04-29 15:54 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description asmerm 2009-04-04 20:57:40 UTC
Version:           4.2.2 (KDE 4.2.2) "release 110" (using 4.2.2 (KDE 4.2.2) "release 110", KDE:KDE4:Factory:Desktop / openSUSE_11.1)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.27.19-3.2-default

Easy reproducible:
Go to hotmail.com and enter username and password and then log in. Konqueror hangs.

Expected behavior: it just works.
Comment 1 Maksim Orlovich 2009-04-04 21:32:38 UTC
I have a proposed patch on this on my other machine, let's see if I can dig it up along with analysis notes...
Comment 2 Maksim Orlovich 2009-04-04 21:51:54 UTC
From earlier discussion with carewolf: 
bidiNext is looping, stuck with current == next. I suspect it should do next = 0; after the current = next; as otherwise the second if block in the loop body will not run on 2nd iteration and on.
Comment 3 asmerm 2009-04-04 22:22:04 UTC
You reproduced this bug on your box?
Comment 4 Germain Garand 2009-04-05 16:50:06 UTC
hmm, hell, that's right... I can almost build the testcase from the logic.
Though it's very specific. It needs an increment on an iterator that's on an end of inline, in skipInline mode, with another inline following right after on the line.
Only the midpoint logic can do such thing I think, so it may trigger on initial whitespace skipping, but there need to be some right-side-only border/padding/margin.
Comment 5 Germain Garand 2009-04-05 16:56:18 UTC
data:text/html,<b><i style="padding-right:1px"></i><b>x

here you go ;(
can you commit the fix Maksim?
Comment 6 Maksim Orlovich 2009-04-05 17:49:13 UTC
Not at the moment, don't have a regression test setup at hand...
Comment 7 Germain Garand 2009-04-08 13:44:21 UTC
*** Bug 189091 has been marked as a duplicate of this bug. ***
Comment 8 Germain Garand 2009-04-08 13:48:24 UTC
*** Bug 189114 has been marked as a duplicate of this bug. ***
Comment 9 Maksim Orlovich 2009-04-09 01:48:04 UTC
SVN commit 951343 by orlovich:

Make sure to clear next here, so we look for 
the next next on the next iteration properly. Fixes 
infinite loop in bidiNext on some websites

BUG:188830
BUG:189161


 M  +1 -0      bidi.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=951343
Comment 10 Maksim Orlovich 2009-04-09 01:50:28 UTC
SVN commit 951344 by orlovich:

automatically merged revision 951343:
Make sure to clear next here, so we look for 
the next next on the next iteration properly. Fixes 
infinite loop in bidiNext on some websites

BUG:188830
BUG:189161

 M  +1 -0      bidi.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=951344
Comment 11 Maksim Orlovich 2009-04-09 02:07:43 UTC
SVN commit 951345 by orlovich:

Add Germain's testcase for #188830

CCBUG:188830


 A             baseline/inline/188830.html-dom  
 AM            baseline/inline/svnignore  
 A             tests/inline/188830.html  


WebSVN link: http://websvn.kde.org/?view=rev&revision=951345
Comment 12 Maksim Orlovich 2009-04-12 02:47:50 UTC
*** Bug 189424 has been marked as a duplicate of this bug. ***
Comment 13 Maksim Orlovich 2009-04-29 15:54:28 UTC
*** Bug 190948 has been marked as a duplicate of this bug. ***