Make sure to clear next here, so we look for the next next on the next iteration properly. Fixes infinite loop in bidiNext on some websites

BUG:188830
BUG:189161

svn path=/branches/KDE/4.2/kdelibs/; revision=951343